# crewai_investment_analysis

./: README.md  pyproject.toml  report.md
blogs/: report.md
src/crewai_investment_analysis/: crew.py  main.py
src/crewai_investment_analysis/config/: agents.yaml  tasks.yaml
