[project]
name = "crewai_investment_analysis"
version = "0.1.0"
description = "crewai_investment_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai-tools>=1.8.0",
    "crewai[tools]==1.8.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "fastapi-sso>=0.17.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.6",
    "langchain-groq>=1.1.1",
    "litellm>=1.75.3",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
]

[project.scripts]
crewai_investment_analysis = "crewai_investment_analysis.main:run"
run_crew = "crewai_investment_analysis.main:run"
train = "crewai_investment_analysis.main:train"
replay = "crewai_investment_analysis.main:replay"
test = "crewai_investment_analysis.main:test"
run_with_trigger = "crewai_investment_analysis.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
